--- a/styles/base.css
+++ b/styles/base.css
@@ -292,8 +292,8 @@ section {
   }
   
   button:hover {
-    color: #F4D35E;
-    background: #F95738;
+    color: #0D3B66;
+    background: #F4D35E;
   }
   
   input:required,
