--- a/styles/base.css
+++ b/styles/base.css
@@ -17,9 +17,9 @@
 }
 
 #closeBanner {
-    color: #F95738;
+    color: #0D3B66;
     background: #F4D35E;
-    border-color: #0D3B66;
+    border-color: #F95738;
 }
 
 #banner p {
