--- a/styles/base.css
+++ b/styles/base.css
@@ -13,7 +13,7 @@
 #closeBanner {
     color: #0D3B66;
     background: #F4D35E;
-    border-color: #F95738;
+    border-color: #FAF0CA;
 }
 
 #banner p {
