--- a/styles/base.css
+++ b/styles/base.css
@@ -13,7 +13,7 @@
 #closeBanner {
     color: #0D3B66;
     background: #F4D35E;
-    border-color: #FAF0CA;
+    border-color: #0D3B66;
 }
 
 #banner p {
@@ -174,7 +174,7 @@ ul.navigation.open {
 footer {
     display: block;
     background-color: #F95738;
-    color: #0D3B66;
+    color: #FFFFFF;
     padding: 5px;
     text-align: center; 
 }
@@ -185,16 +185,16 @@ footer img {
 }
 
 .socials {
-    margin: 15px;
+    margin: 5px;
 }
 
 .fa {
-    padding: 9px;
-    width: 20px;
-    color: #0D3B66;
+    padding: 8px;
+    width: 60px;
+    color: #FFFFFF;
     margin: 4px;
     border: solid 2px;
-    font-size: 20px;
+    font-size: 15px;
 }
 a:hover,
 .fa:hover {
