--- a/styles/base.css
+++ b/styles/base.css
@@ -174,7 +174,7 @@ ul.navigation.open {
 footer {
     display: block;
     background-color: #F95738;
-    color: #FFFFFF;
+    color: #0D3B66;
     padding: 5px;
     text-align: center; 
 }
