--- a/styles/base.css
+++ b/styles/base.css
@@ -191,7 +191,7 @@ footer img {
 .fa {
     padding: 8px;
     width: 60px;
-    color: #FFFFFF;
+    color: #0D3B66;
     margin: 4px;
     border: solid 2px;
     font-size: 15px;
