--- a/styles/base.css
+++ b/styles/base.css
@@ -227,8 +227,10 @@ section {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    margin: 10px;
-    padding: 15px;
+    margin: 50px;
+    padding: 5px;
+    box-shadow: 1px 1px 15px #EE964B;
+
   }
   
   form {
@@ -356,6 +358,19 @@ section {
     width: 100%;
     height: 500px;
     box-shadow: 1px 1px 15px #EE964B;
-
   }
   
+  .agreements {
+    margin: 50px auto;
+    padding: 5px;
+    width: max-content;
+    line-height: 1.5;
+    background-color:#F4D35E;
+    box-shadow: 1px 1px 15px #EE964B;
+  }
+  
+  .agreements ul {
+    padding: 30px;
+    list-style-type: square;
+    text-align:start;
+  }
