--- a/styles/base.css
+++ b/styles/base.css
@@ -244,7 +244,7 @@ section {
   }
   
   input::placeholder {
-    color: rgb(170, 175, 180);
+    color: gray;
   }
   
   .form-cont label {
@@ -296,8 +296,8 @@ section {
   input:required,
   textarea {
     border: 1px solid #EE964B;
-    border-left: 3px solid #F95738;
-    border-right: 3px solid #F4D35E;
+    border-left: 3px solid #EE964B;
+    border-right: 3px solid #EE964B;
   }
   #error-message {
     margin: -10px 0 15px;
