--- a/styles/base.css
+++ b/styles/base.css
@@ -134,6 +134,9 @@ ul.navigation.open {
     padding: 15px;
 }
 
+.home h2{
+  font-size: 40px;
+}
 .slide-card img{
     width: 90%;
     height: auto; 
