--- a/styles/base.css
+++ b/styles/base.css
@@ -135,7 +135,7 @@ ul.navigation.open {
 }
 
 .home h2{
-  font-size: 40px;
+  font-size: 30px;
 }
 .slide-card img{
     width: 90%;
@@ -396,4 +396,28 @@ section {
     padding: 30px;
     list-style-type: square;
     text-align:start;
+  }
+
+  table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+
+  th,
+  td {
+    padding: 10px;
+    border: 2px solid black;
+  }
+
+  tr:nth-child(even) {
+    background-color: #F4D35E;
+  }
+
+  th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    width: auto;
+    text-align: center;
+    background-color: #0D3B66;
+    color: white;
   }
