--- a/styles/larger.css
+++ b/styles/larger.css
@@ -29,9 +29,9 @@
         font-size: 1.2rem;
     }
     .hero-message{
-        position:fixed;
-        top: 25%;
-        width: 20%;
+        position:relative;
+        top: 50px;
+        width: 30%;
         margin-left: 35px;
         font-size: 1.5rem;
         background-color: #0D3B66;
@@ -60,32 +60,32 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(195px, 1fr));
             grid-column: 2/12;
-            row-gap: 1.5rem;
+            row-gap: 1rem;
             margin-top: 1rem;
             padding-bottom: 1.5rem;
         }
-    
+        
         .forecast-card {
             margin: auto;
-            width: 12rem;
+            width: 15rem;
             grid-column: auto;
         }
 
         .home span {
             display: flex;
             }
-            .contact-container {
-                margin-top: 0;
-                display: grid;
-                grid-template-columns: 1fr 1fr;
-                gap: 10px;
-                grid-auto-rows: auto;
-                grid-template-areas:
-                  "title title"
-                  "contact-us form-container"
-                  "contact-us form-container"
-                  "map map";
-              }
+.contact-container {
+    margin-top: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    grid-auto-rows: auto;
+    grid-template-areas:
+        "title title"
+        "contact-us form-container"
+        "contact-us form-container"
+        "map map";
+    }
 
               
 }
