--- a/styles/base.css
+++ b/styles/base.css
@@ -223,7 +223,7 @@ section {
     display: block;
     background-color:#F4D35E;
     color:#0D3B66;
-    margin: 1.5rem;
+    margin: 60px;
     padding: 1rem;
     text-align: center;
     border-radius: 5px;
