--- a/styles/larger.css
+++ b/styles/larger.css
@@ -54,6 +54,20 @@
         font-size: 2.5rem; 
     }
 
+    
+
+section {
+    text-align: center; /* Center-align the pictures within the container */
+}
+
+.vehicles {
+    display: flex;
+    flex-direction: row;
+   }
+
+    
+
+
         /* Weather */
 
         #weather {
