--- a/styles/base.css
+++ b/styles/base.css
@@ -48,6 +48,7 @@ body {
 
 h1, h2, h3, h4 {
     font-family: "Playfair Display", serif;
+    color:#0D3B66;
 }
 
 header {
@@ -137,14 +138,18 @@ ul.navigation.open {
 .home h2{
   font-size: 30px;
 }
-
+.home h3{
+color:#0D3B66;
+}
 .home p{
   text-align: left;
   font-size: 20px;
   padding:15px;
+  color: #0D3B66;
 }
+
 .slide-card img{
-    width: 90%;
+    width: 100%;
     height: auto; 
     border-radius: 8px;
     margin-top: .5rem; 
@@ -154,6 +159,15 @@ ul.navigation.open {
     font-size: 1.5rem;
     padding-bottom: .5rem;
 }
+
+    .hero-message{
+        position:relative;
+        background-color: #0D3B66;
+        color: #F4D35E;
+        font-size:35px;
+        text-align: center;
+        opacity: 0.9;
+    }
 
 /* Weather */
 #weather {
@@ -231,7 +245,21 @@ section {
 .info a {
     padding: 15px;
 }
+.pic-container, .contact-us {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 30px;
+  padding: 5px;
+  box-shadow: 1px 1px 15px #EE964B;
+  background-color:#F4D35E;
+  border-radius: 5px;
+}
+.pic-container, .contact-us img{
+  border-radius:5px;
+  box-shadow: 1px 1px 15px #EE964B;
 
+}
 
 
 /*Contact*/
@@ -294,7 +322,7 @@ section {
     flex-direction: row;
     width: 100%;
   }
-  
+
   button {
     background: #EE964B;
   }
@@ -360,7 +388,6 @@ section {
   width: 90%;
   height: auto;
   margin: 30px;
-  box-shadow: 1px 1px 15px #EE964B;
 }
 
 
