--- a/styles/larger.css
+++ b/styles/larger.css
@@ -36,10 +36,13 @@
         font-size: 1.5rem;
         background-color: #0D3B66;
         color: #F4D35E;
+        font-size:35px;
         text-align: center;
         opacity: 0.9;
         border-radius: 100px;
-        padding-bottom: 15px;
+        padding-left: 15px;
+        padding-right: 15px;
+        padding: 15px;
     }
 
 
@@ -48,7 +51,7 @@
         width: 80%;
         height: auto; 
         border-radius: 5px;
-        margin-top: 1.5rem; 
+        margin-top: 1rem; 
     }
     .slide-card>.text{
         font-size: 2.5rem; 
@@ -99,6 +102,12 @@ section {
         "contact-us form-container"
         "contact-us form-container"
         "map map";
+    }
+    .home img{
+        width: 90%;
+        height: auto;
+        margin: 30px;
+      
     }
 
               
