--- a/styles/base.css
+++ b/styles/base.css
@@ -270,8 +270,6 @@ section {
     flex-wrap: wrap;
     margin: 50px;
     padding: 5px;
-    box-shadow: 1px 1px 15px #EE964B;
-
   }
   
   form {
@@ -304,12 +302,12 @@ section {
 }
 
 .form-cont button {
-  margin-top: 20px;
-  width: calc(100% - 20px);
-  padding: 10px 20px;
-  cursor: pointer;
-  border: none;
-  border-radius: 4px;
+  border-radius: 8px;
+  padding: .75rem 1.5rem;
+  margin: 0 0 2rem 2%;
+  width: 96%;
+  max-width: 20rem;
+
 }
 
 
@@ -373,6 +371,8 @@ section {
     grid-area: form-container;
     box-shadow: 1px 1px 15px #EE964B;
     background: #F4D35E;
+    border-radius: 10px;
+    margin: 29px;
 
   }
 
